[project]
name = "dreambot"
version = "1.0"
authors = [
    { name="Chris Jones", email="cmsj@tenshu.net" },
]
description = "A framework for running chat bot services"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/cmsj/dreambot"
"Bug Tracker" = "https://github.com/cmsj/dreambot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.force-include]
"bin/dreambot_frontend_irc.py" = "dreambot/dreambot_frontend_irc.py"
"bin/dreambot_backend_gpt.py" = "dreambot/dreambot_backend_gpt.py"

[tool.hatch.build.targets.wheel.force-include]
"bin/dreambot_frontend_irc.py" = "dreambot/dreambot_frontend_irc.py"
"bin/dreambot_backend_gpt.py" = "dreambot/dreambot_backend_gpt.py"

[project.scripts]
dreambot_frontend_irc = "dreambot.dreambot_frontend_irc:main"
dreambot_backend_gpt = "dreambot.dreambot_backend_gpt:main"