[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/cmsj/dreambot"
"Bug Tracker" = "https://github.com/cmsj/dreambot/issues"

[project]
name = "dreambot"
version = "1.0"
authors = [
    { name="Chris Jones", email="cmsj@tenshu.net" },
]
description = "A framework for running chat bot services"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "asyncio==3.4.3",
    "openai==0.27.2",
    "nats-py==2.2.0"
]

[project.optional-dependencies]
test = [
    "pytest==7.2.2",
    "pytest-asyncio==0.21.0",
    "pytest-mock==3.10.0",
    "pytest-cov==4.0.0"
]

[project.scripts]
dreambot_frontend_irc = "dreambot.dreambot_frontend_irc:main"
dreambot_backend_gpt = "dreambot.dreambot_backend_gpt:main"
dreambot_backend_stabdiff = "dreambot.dreambot_backend_stabdiff:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
pythonpath = [
  "src"
]
